style.css
/* 
Theme Name: Willowbrook Labs
Author: theFlyingCactus
Author URI:
Version: 1.0
*/


.site-header{
	background: #181c1f;
}

.site-header img{
	display: inline;
}

.nav-menu {
	margin-top: 20px;
	float: right;

}
.nav-menu li {
	list-style-type: none;
	
	

}
.nav-menu a {
	text-decoration: none;
	list-style-type: none;
	color: white;
	font-family: Helvetica;
}

div.contact-box {
	border: solid;
	border-color: rgb(201, 201, 201);
	padding-top: 0px;		

}

div.quote-box{
	border: solid;
	border-color: rgb(201, 201, 201);
}

div.main-boxes {
	margin-top: 50px;

	height: 500px;

}


div.info-boxes h1{
	color: rgb(201, 201, 201);
	color: #e29860;

}


div.info-boxes p{
	margin-top: 100px;
}

footer {
	
	margin-top: 100px;
}
footer li {
	color: white;	
}
.jumbo{
	margin-top: 150px;

}
nav.nav-menu-footer  {
	height: 60px;
}
.nav-menu-footer li {
	list-style-type: none;
	

}

.nav-menu{
	padding-top: 15px;

}
body{

	padding: 0px;

}
div.container-fluid{
	padding: 0px;

}

img.logo{

	padding-bottom: 10px; 
	padding-top: 10px; 

}


.center-block {
    display: block;
    margin: 0 auto;
}
div.statment{
	padding-top: 50px;
	padding-bottom: 50px;

}
div.statment h3{
	font-size: 18px;
	font-weight: bold;
}

footer {
	background: #181c1f;
}


footer p{
	font-size: 15px;
}
footer a{
	text-decoration: none;
	color: #8b939b;
	padding-left: 5px;
	font-size: 15px;
}
footer ul.social-media-list li {
	display: inline;
	padding: 0px;
}
footer ul.social-media-list li {
	list-style-type: none;
}
footer ul.social-media-list li a{
	color: #8b939b;
}
footer p.Follow{
	color: white;
	text-decoration: none;
	padding-right: 10px;
	padding-left: 30px;
	color: #8b939b;
}


footer ul.social-media-list{
	padding: 0px;
}
footer ul.social-media-list a{
	color: #8b939b;
}

html,
body {
  height: 100%;
	margin: 0;
  /* The html and body elements cannot have any padding or margin. */
}
div.container-fluid{

  min-height: 100%;
  margin-bottom: -60px;
}

/*#wrap {
  min-height: 100%;
  margin-bottom: -60px;
}*/

#footer,
#push {
  height: 60px;
}

div.social-media{
	height: 60px;


}
div.menu{
	height:50px;
	
}
nav div ul{
	margin-bottom: 0px;
}

nav div ul li{
	padding-top:10px;
	padding-right: 15px;	
	display: inline;
}

p.trademark{
	
	color: #8b939b;
	padding-top: 10px

}
h1#contact-us-link{

	color: black;
	font-size: 25px;
	padding-top: 146px	
}
h1#contact-us-link a{

	text-decoration: underline;
	color: black;
}
h1#contact-us-link a:hover{
	text-decoration: none;
}
h1#about-us-link{

	color: black;
	font-size: 25px;
	padding-top: 80px;
}

h1#about-us-link a{

	text-decoration: underline;
	color: black;
}
h1#about-us-link a:hover{
	text-decoration: none;
}

img#jumbo-image{
	width: 100%;

}

div#contact-form {
	border: solid;
	border-color: #c9c9c9;

}

div#contact-header {

	padding-top: 100px;

}
div#contact-form-row{

	padding-top: 50px;

}

div.form-divs{
	padding-top: 60px;

}

div#message-input{
	padding-top: 40px;
	height: 100px;
}

div#email-div{
	padding-bottom: 100px;
}


div#button-div{
	
	padding-top: 50px;

}


h1#about-us-link{

}

body{
	min-width:1000px;        /* Suppose you want minimum width of 1000px */
	width: auto !important;  /* Firefox will set width as auto */
	width:1000px; 

}

#article{
	padding-top: 50px;
}
#article-title{
	font-family: bold;
	font-size: 4em;
}

div.row-for-top-three {

	padding-top: 100px;
}

div.top-three-posts {
	border: solid;
	border-color: #cbcbcb;

}
div.top-three-posts h2 a  {
	color: black;
}


div.lower-post{

	width: 0;

}

div.lower-post-image-div img{
	


}

div.title-and-excerpt {
	margin-right: 0px;

}
hr#lower-post-bottom {

	height: 1px;
	width: 100%;

}

hr#upper-post-separator{
	border-color: black;
	overflow: hidden;
	padding: 0px;
}

div.Lower-post h2 a{
	text-decoration: none;	
	color: #373a3c;;

}
div.Lower-post h2 a:hover{
	color: black;
}
div.top-three-posts h2 a{
	text-decoration: none;	
	color: #373a3c;;

}
div.top-three-posts h2 a:hover{
	color: black;

}
/* {
	border : dotted;
	border-color: red;

}

